[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Chat.gd" type="Script" id=1]

[node name="Chat" type="VBoxContainer"]
margin_right = 288.0
margin_bottom = 459.0
script = ExtResource( 1 )

[node name="ChatLog" type="ItemList" parent="."]
margin_top = 418.0
margin_right = 288.0
margin_bottom = 427.0
size_flags_horizontal = 3
size_flags_vertical = 10
auto_height = true

[node name="ChatBox" type="HBoxContainer" parent="."]
margin_top = 431.0
margin_right = 288.0
margin_bottom = 459.0
size_flags_horizontal = 3

[node name="OptionButton" type="OptionButton" parent="ChatBox"]
margin_right = 29.0
margin_bottom = 28.0

[node name="LineEdit" type="LineEdit" parent="ChatBox"]
margin_left = 33.0
margin_right = 288.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="RPCTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="RPCTimer" to="." method="_on_RPCTimer_timeout"]
